# WeatherDataApp

WeatherApp/: AdditionalWeatherVariables.cpp  AdditionalWeatherVariables.h  AdvancedHistoricalWeather.cpp  AdvancedHistoricalWeather.h  AdvancedWeatherForecast.cpp  AdvancedWeatherForecast.h  AirQuality.cpp  AirQuality.h  CMakeLists.txt  EuropeanAirQuality.cpp  EuropeanAirQuality.h  HistoricalWeather.cpp  HistoricalWeather.h  Location_management.cpp  Location_management.h  MainMenu.cpp  MainMenu.h  WeatherForecast.cpp  WeatherForecast.h  main.cpp
